# vcpu

./: Cargo.toml  generate_bindings.sh  vcpu.code-workspace
src/: constants.rs  enums.rs  instructions.rs  lib.rs  memory.rs  processor.rs  register.rs  storage.rs  test.rs
src/memory/: composite.rs  io.rs  mod.rs
src/processor/: core.rs  enums.rs  logic.rs  mod.rs
src/test/: instructions.rs
src/test/instructions/: add.rs  addi.rs  and.rs  andi.rs  bez.rs  bnz.rs  copy.rs  div.rs  divi.rs  fadd.rs  fdiv.rs  flip.rs  fmul.rs  fsub.rs  ftoi.rs  invalid.rs  itof.rs  jl.rs  jlr.rs  jmp.rs  jr.rs  lb.rs  lh.rs  lhi.rs  li.rs  lw.rs  mul.rs  muli.rs  or.rs  ori.rs  sb.rs  seq.rs  seqi.rs  sge.rs  sgei.rs  sgeu.rs  sgeui.rs  sgt.rs  sgti.rs  sgtu.rs  (+25 more)
util/: Cargo.toml
util-derive/: Cargo.toml
util-derive/src/: lib.rs
util/src/: lib.rs
vasm/: Cargo.toml
vasm/src/: data.rs  error.rs  instructions.rs  int_util.rs  labels.rs  lib.rs  main.rs  parser.rs  source_map.rs  test.rs  vasm.pest
vasm/src/test/: mod.rs  pest.rs
vcpu-interop/: Cargo.toml  cbindgen.toml
vcpu-interop/src/: executable.rs  exit_code.rs  lib.rs  memory.rs  processor.rs  program.rs  register.rs  result.rs  source_map.rs  test.rs  util.rs
vex/: Cargo.toml  test.vasm
vex/src/: lib.rs  main.rs  test.rs
vexfile/: Cargo.toml
vexfile/src/: lib.rs  test.rs
vexfile/tests/: mod.rs
