[package]
name = "vasm"
version = "0.1.0"
authors = ["Dennis Heinze <dennisjp.heinze@gmail.com>"]
description = "Parses and assembles VCPU assembly."
edition = "2018"

[dependencies]
byteorder = "1"
clap = "~2.32.0"
matches = "0.1"
num = "0.1"
pest = "2.1"
pest_derive = "2.1"
vcpu = { path = ".." }
vexfile = { path = "../vexfile" }
