[package]
name = "vcpu-interop"
version = "0.1.0"
authors = ["Dennis Heinze <dennisjp.heinze@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
vcpu = { path = ".." }
util = { path = "../util" }
util-derive = { path = "../util-derive" }
vexfile = { path = "../vexfile" }
vasm = { path = "../vasm" }
num-traits = "0.2"
num-derive = "0.2"
